# Insect-Tower-IMAC

./: .gitignore  CMakeLists.txt  README.md
archive/GUI/: GUI.c  GUI.h  README.md  SDLConfig.h  _main.c  a.out  cases.c  cases.h  display.c  display.h  mouse.c  mouse.h  structures.h
archive/Sprite/: SDLConfig.c  SDLConfig.h  _main.c  a.out  animation.c  animation.h  image.ppm  structures.h
archive/check-itd-file/: a.out  itd-file.c  itd-file.h  level1.itd  main.c
archive/files/: a.out  test-files.c
archive/load-ppm/: lol.ppm  main.c  ppm-loader.c  ppm-loader.h
archive/main/: draw.c  draw.h  main.c
archive/monster/: cases.c  cases.h  drawMonster.c  drawMonster.h  main.c  monster.c  monster.h
archive/monster-map/: cases.c  cases.h  display.c  display.h  drawMonster.c  drawMonster.h  monster.h  place-map.c
archive/place-map/: cases.c  display.c  display.h  place-map.c
archive/place-mapv2/: README.md  cases.c  cases.h  display.c  display.h  main.c  player.c  player.h  tour.c  tour.h
archive/place-mapv2/test/: test.c  testa.c  testa.h  (+1 more)
archive/read-text-file/: a.out  main.c
archive/ttf/: SDLConfig.c  _main.c  a.out  display.c  display.h  structures.h
doc/: itd.xcf
images/: sprite_letters.xcf
inspi/: iso-view-exemple
level/: BIRI.itd  BIRI.ppm  OLIVIER.itd  OLIVIER.ppm  STEEVE.itd  STEEVE.ppm
level/old/: level2.itd  level2.ppm
src/: SDLConfig.c  SDLConfig.h  _main.c  cases.c  cases.h  display.c  display.h  gui.c  gui.h  itd-file.c  itd-file.h  itineraire.c  itineraire.h  keyboard.c  keyboard.h  monster.c  monster.h  mouse.c  mouse.h  player.c  player.h  ppm-loader.c  ppm-loader.h  projectile.c  projectile.h  sound.c  sound.h  sprite.c  sprite.h  structures.h  tour.c  tour.h  waves.c  waves.h
